apply plugin: 'java'
apply plugin: 'jacoco'

version = '1.0-SNAPSHOT'
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDirs = ["src/main/java"]
        }
    }
}

dependencies {
    compile 'ch.qos.logback:logback-classic:1.2.3'
    compile 'com.mashape.unirest:unirest-java:1.4.9'
    compile 'org.jsoup:jsoup:1.10.2'
    compile 'commons-cli:commons-cli:1.4'

    // dependencies for se-repo data
    compile 'org.jboss.resteasy:resteasy-atom-provider:3.1.2.Final'
    compile 'org.jboss.resteasy:resteasy-jackson2-provider:3.1.2.Final'

    // testing against web api
    testCompile 'com.github.tomakehurst:wiremock:2.6.0'
    testCompile 'junit:junit:4.12'
}

test {
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
    dependsOn 'cleanTest'
}

jacocoTestReport {
    reports {
        xml.enabled = true
        html.enabled = true
    }
}

check.dependsOn jacocoTestReport